...
    onSend: (String) -> Unit,
    paddingValues: PaddingValues,
    connectivityStatus: ConnectivityStatus
) {
  Column(modifier = Modifier.padding(paddingValues).imePadding()) {
    ChatTextBody(messages, modifier = Modifier.weight(1f))
    ChatInput(onSend, connectivityStatus)
  }
}
/**
 * Displays a list of chat messages in a scrollable column.
 *
 * @param messages List of chat messages to display.
...
              }
            },
            enabled = text.isNotEmpty(),
            modifier =
                Modifier.padding(start = 8.dp)
                    .background(if (text.isNotEmpty()) lightOrange else Color.Gray, CircleShape)
                    .testTag("SendButton")) {
              Icon(Icons.AutoMirrored.Filled.Send, contentDescription = "Send", tint = Color.White)
            }
      }
}

