...
                  currentWeekStartDate.minusWeeks(1)
                }
            previousPage = page
          }
        }
  }
  HorizontalPager(state = pagerState, modifier = modifier.testTag("HorizontalPager")) {
    WeekView(isDraft, currentWeekStartDate, tile)
  }
}

/**
 * Composable function to display a week view with a [tile] for each day and time slot.
...
